--- a/template_pathway_analysis.Rmd
+++ b/template_pathway_analysis.Rmd
@@ -8,9 +8,12 @@ names(geneList) <- rownames(weighted_metagenes)
 
 ## feature 3: decreasing order
 geneList <- sort(geneList, decreasing = TRUE)
+geneList_HUGO = geneList
 #data(geneList, package="DOSE")
 geneList_conversion = bitr(names(geneList), fromType="SYMBOL", toType="ENTREZID", OrgDb="org.Hs.eg.db")
 names(geneList) <- geneList_conversion$ENTREZID
+names(geneList_HUGO) <- geneList_conversion$SYMBOL
+
 
 #define driver genes
 ind_pos_tail_3SD=which(weighted_metagenes[,i]>Mean[i]+3*SD[i])
@@ -47,7 +50,8 @@ Let us take a look at the results of the enrichments of the drivers of the posit
                     pAdjustMethod = "BH",
                     pvalueCutoff  = 0.01,
                     qvalueCutoff  = 0.01,
-                    readable      = TRUE)
+                    readable      = TRUE,
+                    pool         = TRUE)
 
 ego_neg <- enrichGO(gene      = gene_neg_tail_list$ENTREZID,
                     universe      = names(geneList),
@@ -68,7 +72,8 @@ if (nrow(ego_pos) > 0 & nrow(ego_neg) == 0 )
   print(plot_grid(go1_d, ncol=1)) 
   if (nrow(ego_pos) > 1)
   {
-    go1_e <- emapplot(ego_pos, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot of the drivers (pos tail) in community ",i))
+    ego_pos2 <- pairwise_termsim(ego_pos, method="Wang", semData = d)
+    go1_e <- emapplot(ego_pos2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot of the drivers (pos tail) in community ",i))
     print(plot_grid(go1_e, ncol=1)) #, labels=LETTERS[1:4]
   }
   go1_c <- cnetplot(ego_pos, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot of the drivers (pos tail) in community ",i))
@@ -79,20 +84,23 @@ if (nrow(ego_pos) > 0 & nrow(ego_neg) == 0 )
   print(plot_grid(go2_d, ncol=1)) 
   if (nrow(ego_neg) > 1)
   {
-    go2_e <- emapplot(ego_neg, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot of the drivers (neg tail) in community ",i))
+    ego_neg2 <- pairwise_termsim(ego_neg, method="Wang", semData = d)
+    go2_e <- emapplot(ego_neg2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot of the drivers (neg tail) in community ",i))
     print(plot_grid(go2_e, ncol=1)) #, labels=LETTERS[1:4]  
   }
   go2_c <- cnetplot(ego_neg, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot of the drivers (neg tail) in community ",i))
   print(plot_grid(go2_c, ncol=1)) #, labels=LETTERS[1:4]
 } else if (nrow(ego_pos) > 0 & nrow(ego_neg) > 0 )
 {
-  go1_d <- dotplot(ego_pos, showCategory=20) + ggtitle(paste0("\n\n\ndotplot of the drivers drivers (pos tail) in community ",i))
-  go2_d <- dotplot(ego_neg, showCategory=20) + ggtitle(paste0("\n\n\ndotplot of the drivers drivers (neg tail) in community ",i))
+  go1_d <- dotplot(ego_pos, showCategory=20, x = "GeneRatio") + ggtitle(paste0("\n\n\ndotplot of the drivers drivers (pos tail) in community ",i))
+  go2_d <- dotplot(ego_neg, showCategory=20, x = "GeneRatio") + ggtitle(paste0("\n\n\ndotplot of the drivers drivers (neg tail) in community ",i))
   print(plot_grid(go1_d,go2_d, ncol=2)) 
   if (nrow(ego_pos) > 1 & nrow(ego_neg) > 1 )
   {
-    go1_e <- emapplot(ego_pos, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot of the  drivers (pos tail) in community ",i))
-    go2_e <- emapplot(ego_neg, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot of the  drivers (neg tail) in community ",i))
+    ego_pos2 <- pairwise_termsim(ego_pos, method="Wang", semData = d)
+    ego_neg2 <- pairwise_termsim(ego_neg, method="Wang", semData = d)
+    go1_e <- emapplot(ego_pos2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot of the  drivers (pos tail) in community ",i))
+    go2_e <- emapplot(ego_neg2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot of the  drivers (neg tail) in community ",i))
     print(plot_grid(go1_e, go2_e, ncol=2)) #, labels=LETTERS[1:4]
   }
   go1_c <- cnetplot(ego_pos, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot of the drivers (pos tail) in community ",i))
@@ -156,32 +164,32 @@ ek2_d <- dotplot(ek_neg, showCategory=20) + ggtitle(paste0("\n\n\ndotplot for th
 if (nrow(ek_pos) > 0 & nrow(ek_neg) == 0 )
 {
   print(plot_grid(ek1_d, ncol=1))
-  if (nrow(ek_pos) > 1)
-  {
-    ek1_e <- emapplot(ek_pos, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
-    print(plot_grid(ek1_e, ncol=1)) #, labels=LETTERS[1:4]
-  }
+  # if (nrow(ek_pos) > 1)
+  # {
+  #   ek1_e <- emapplot(ek_pos, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
+  #   print(plot_grid(ek1_e, ncol=1)) #, labels=LETTERS[1:4]
+  # }
   ek1_c <- cnetplot(ek_pos, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (pos tail) in community ",i))
   print(plot_grid(ek1_c, ncol=1)) #, labels=LETTERS[1:4]
 } else if(nrow(ek_pos) == 0 & nrow(ek_neg) > 0 )
 {
   print(plot_grid(ek2_d, ncol=1))
-  if (nrow(ek_neg) > 1)
-  {
-    ek2_e <- emapplot(ek_neg, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
-    print(plot_grid(ek2_e, ncol=1)) #, labels=LETTERS[1:4]
-  }
+  # if (nrow(ek_neg) > 1)
+  # {
+  #   ek2_e <- emapplot(ek_neg, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
+  #   print(plot_grid(ek2_e, ncol=1)) #, labels=LETTERS[1:4]
+  # }
   ek2_c <- cnetplot(ek_neg, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (neg tail) in community ",i))
   print(plot_grid(ek2_c, ncol=1)) #, labels=LETTERS[1:4]
 } else if (nrow(ek_pos) > 0 & nrow(ek_neg) > 0 )
 {
   print(plot_grid(ek1_d,ek2_d, ncol=2))
-   if (nrow(ek_pos) > 1 & nrow(ek_neg) > 1 )
-   {
-      ek1_e <- emapplot(ek_pos, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
-      ek2_e <- emapplot(ek_neg, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
-      print(plot_grid(ek1_e, ek2_e, ncol=2)) #, labels=LETTERS[1:4]
-   }
+   # if (nrow(ek_pos) > 1 & nrow(ek_neg) > 1 )
+   # {
+   #    ek1_e <- emapplot(ek_pos, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
+   #    ek2_e <- emapplot(ek_neg, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
+   #    print(plot_grid(ek1_e, ek2_e, ncol=2)) #, labels=LETTERS[1:4]
+   # }
   ek1_c <- cnetplot(ek_pos, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (pos tail) in community ",i))
   ek2_c <- cnetplot(ek_neg, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (neg tail) in community ",i))
   print(plot_grid(ek1_c, ek2_c, ncol=2)) #, labels=LETTERS[1:4]
@@ -210,6 +218,43 @@ datatable(data.frame(ek_gse_pos), rownames=FALSE, caption=paste0("\n\n\nKEGG gse
 datatable(data.frame(ek_gse_neg), rownames=FALSE, caption=paste0("\n\n\nKEGG gsea for drivers (neg tail) in community ",i))
 
 ```
+
+
+<br><br>
+
+#### `r paste0("MSigDB enrichment for community ",i)`
+Let us now take a look at the results of the enrichments of the drivers of the positive and negative tails based on MSigDB catalogues.
+
+
+```{r, echo=FALSE, message=FALSE, warning = FALSE,fig.fullwidth = TRUE, fig.width=12}
+egmt_pos_combine=data.frame(matrix(nrow=0,ncol=10))
+egmt_neg_combine=data.frame(matrix(nrow=0,ncol=10))
+
+for (gmt_files in gene_sets)
+{
+  c <- read.gmt(gmt_files)
+  msigdb_egmt_pos <- enricher(gene_pos_tail_list$SYMBOL, TERM2GENE=c, pvalueCutoff = 0.01, pAdjustMethod = "BH", universe=names(geneList_HUGO), minGSSize = 10, maxGSSize = 900, qvalueCutoff = 0.01)
+  msigdb_egmt_neg <- enricher(gene_neg_tail_list$SYMBOL, TERM2GENE=c, pvalueCutoff = 0.01, pAdjustMethod = "BH", universe=names(geneList_HUGO), minGSSize = 10, maxGSSize = 900, qvalueCutoff = 0.01)
+  
+  if ( nrow(msigdb_egmt_pos)>0 )
+  {
+    egmt_pos = as.data.frame(msigdb_egmt_pos)
+    egmt_pos$Community=paste0("C",i)
+    egmt_pos_combine=rbind(egmt_pos_combine,egmt_pos)
+  }
+  
+  if ( nrow(msigdb_egmt_neg)>0 )
+  {
+    egmt_neg = as.data.frame(msigdb_egmt_neg)
+    egmt_neg$Community=paste0("C",i)
+    egmt_neg_combine=rbind(egmt_neg_combine,egmt_neg)
+  }
+}
+
+datatable(egmt_pos_combine[,c(10,1:9)], rownames = FALSE)
+datatable(egmt_neg_combine[,c(10,1:9)], rownames = FALSE)
+```
+
 
 <br><br>
 
@@ -249,22 +294,24 @@ if (nrow(edo_pos) > 0 & nrow(edo_neg) == 0 )
 {
   do1_d <- dotplot(edo_pos, showCategory=20) + ggtitle(paste0("\n\n\ndotplot for the drivers (pos tail) in community ",i))
   print(plot_grid(do1_d, ncol=1))
-  if (nrow(edo_pos) > 1)
-  {
-    do1_e <- emapplot(edo_pos, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
-    print(plot_grid(do1_e, ncol=1)) #, labels=LETTERS[1:4]    
-  }
+  # if (nrow(edo_pos) > 1)
+  # {
+  #   edo_pos2 <- pairwise_termsim(edo_pos, method="Wang", semData = do)
+  #   do1_e <- emapplot(edo_pos2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
+  #   print(plot_grid(do1_e, ncol=1)) #, labels=LETTERS[1:4]    
+  # }
   do1_c <- cnetplot(edo_pos, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the  drivers (pos tail) in community ",i))
   print(plot_grid(do1_c, ncol=1)) #, labels=LETTERS[1:4]
 } else if(nrow(edo_pos) == 0 & nrow(edo_neg) > 0 )
 {
   do2_d <- dotplot(edo_neg, showCategory=20) + ggtitle(paste0("\n\n\ndotplot for the drivers (neg tail) in community ",i))
   print(plot_grid(do2_d, ncol=1))
-  if (nrow(edo_neg) > 1)
-  {
-    do2_e <- emapplot(edo_neg, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
-    print(plot_grid(do2_e, ncol=1)) #, labels=LETTERS[1:4]
-  }
+  # if (nrow(edo_neg) > 1)
+  # {
+  #   edo_neg2 <- pairwise_termsim(edo_neg, method="Wang", semData = do)
+  #   do2_e <- emapplot(edo_neg2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
+  #   print(plot_grid(do2_e, ncol=1)) #, labels=LETTERS[1:4]
+  # }
   do2_c <- cnetplot(edo_neg, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (neg tail) in community ",i))
   print(plot_grid(do2_c, ncol=1)) #, labels=LETTERS[1:4]
 } else if (nrow(edo_pos) > 0 & nrow(edo_neg) > 0 )
@@ -272,12 +319,14 @@ if (nrow(edo_pos) > 0 & nrow(edo_neg) == 0 )
   do1_d <- dotplot(edo_pos, showCategory=20) + ggtitle(paste0("\n\n\ndotplot for the drivers (pos tail) in community ",i))
   do2_d <- dotplot(edo_neg, showCategory=20) + ggtitle(paste0("\n\n\ndotplot for the drivers (neg tail) in community ",i))
   print(plot_grid(do1_d,do2_d, ncol=2))
-  if (nrow(edo_pos) > 1 & nrow(edo_neg) > 1 )
-  {
-    do1_e <- emapplot(edo_pos, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
-    do2_e <- emapplot(edo_neg, pie_scale=2) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
-    print(plot_grid(do1_e, do2_e, ncol=2)) #, labels=LETTERS[1:4]
-  }
+  # if (nrow(edo_pos) > 1 & nrow(edo_neg) > 1 )
+  # {
+  #   edo_pos2 <- pairwise_termsim(edo_pos, method="Wang", semData = do)
+  #   edo_neg2 <- pairwise_termsim(edo_neg, method="Wang", semData = do)
+  #   do1_e <- emapplot(edo_pos2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (pos tail) in community ",i))
+  #   do2_e <- emapplot(edo_neg2, showCategory = 10) + ggtitle(paste0("\n\n\nemapplot for the drivers (neg tail) in community ",i))
+  #   print(plot_grid(do1_e, do2_e, ncol=2)) #, labels=LETTERS[1:4]
+  # }
   do1_c <- cnetplot(edo_pos, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (pos tail) in community ",i))
   do2_c <- cnetplot(edo_neg, foldChange=geneList, node_label="all") + ggtitle(paste0("\n\n\ncnetplot for the drivers (neg tail) in community ",i))
   print(plot_grid(do1_c, do2_c, ncol=2)) #, labels=LETTERS[1:4]
@@ -305,5 +354,6 @@ edo_gse_neg=edo_gse_neg[ind_order_neg,]
 datatable(data.frame(edo_gse_pos), rownames=FALSE, caption=paste0("\n\n\nDO gsea for drivers (pos tail) in community ",i))
 datatable(data.frame(edo_gse_neg), rownames=FALSE, caption=paste0("\n\n\nDO gsea for drivers (neg tail) in community ",i))
 ```
+
 
 <br><br><br>
